# prism-plm

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml
configs/datasets/: swissprot.yaml  uniref50.yaml
configs/experiments/: full_analysis.yaml  quick_test.yaml
configs/models/: esm2_3b.yaml  esm2_650m.yaml  esm2_8m.yaml
configs/steering/: default.yaml
scripts/: run_activation_steering.py  run_clustering_viz.py  run_evaluation.py  run_feature_description.py  run_neuron_batch.py  run_neuron_description.py  run_single_neuron.py
slurm/: setup_env.sh  submit_clustering_viz.sh  submit_evaluation.sh  submit_feature_description.sh  submit_neuron_analysis.sh  submit_neuron_batch.sh  submit_quick_test.sh  submit_single_neuron.sh  submit_steering.sh
src/analysis/: __init__.py  go_enrichment.py
src/analysis/clustering/: __init__.py  base.py  hdbscan_cluster.py  kmeans.py
src/config/: __init__.py  loader.py  registry.py  schema.py
src/data/: __init__.py  protein_dataset.py  sequence_utils.py
src/steering/: __init__.py  analysis.py  hooks.py  vector.py
src/utils/: __init__.py  constants.py  helpers.py  logging_utils.py  output.py
src/visualization/: __init__.py  cluster_viz.py
src/visualization/reducers/: __init__.py  pca_reducer.py  tsne_reducer.py  umap_reducer.py
tests/: conftest.py
tests/unit/analysis/: test_clustering.py
tests/unit/config/: test_loader.py  test_schema.py
tests/unit/data/: test_protein_dataset.py
tests/unit/utils/: test_logging.py  test_output.py
tests/unit/visualization/: test_cluster_viz.py
