[project]
name = "prism-bio"
version = "0.1.0"
description = "Protein Mechanistic Interpretability with PRISM"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.17.0",
    "fair-esm>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "biopython>=1.83",
    "goatools>=1.4.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.33",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
